shim/third-party/rust/vendor/ghost-0.1.6/tests/ui/ffi.rs
#![deny(improper_ctypes_definitions)]

use ghost::phantom;

#[phantom]
pub struct MyPhantom<T>;

pub extern "C" fn extern_fn(_phantom: MyPhantom<i32>) {}

fn main() {}
